# ariamis

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  camera.cpp  camera.hpp  color_shader.fs  context_manager.cpp  context_manager.hpp  default.fs  default.vs  example.cc  fragment_shader.glsl  graphic.cpp  graphic.h  graphic.hpp  light.cpp  light.hpp  lighting_shader.fs  material.cpp  material.hpp  mesh.cpp  mesh.h  mesh.hpp  model_view_matrix.cpp  model_view_matrix.h  obj_loader.cpp  obj_loader.hpp  object_renderer.cpp  object_renderer.hpp  picopng.cpp  picopng.hpp  shader.cpp  shader.h  shader.vs  shader_program.cpp  (+6 more)
data/shaders/: default.fs  gbuffer.fs  gbuffer.vs  h_blur.fs  lighting.fs  quad.vs  quad_shader.fs  ssao.fs  ssao_blur.fs  toon.fs  v_blur.fs
examples/: Makefile  example.cpp
examples/data/shaders/: gbuffer.fs  gbuffer.vs  quad.vs  ssao.fs  ssao_blur.fs
include/: camera.h  context_manager.h  engine.h  graphic.h  light.h  material.h  mesh.h  obj_loader.h  object.h  object_renderer.h  scene.h  shader.h  texture.h
include/ariamis/: camera.h  engine.h  light.h  material.h  mesh.h  obj_loader.h  object.h  renderer.h  scene.h  shader.h  texture.h
shaders/: default.fs  default.vs
src/: CMakeLists.txt  camera.cc  camera.cpp  context_manager.cpp  engine.cc  engine.cpp  example.cpp  glad.cc  graphic.cpp  light.cc  light.cpp  material.cc  mesh.cc  mesh.cpp  obj_loader.cc  obj_loader.cpp  object.cc  object.cpp  object_renderer.cc  object_renderer.cpp  renderer.cc  scene.cc  scene.cpp  shader.cc  shader.cpp  texture.cc  texture.cpp
test/: mesh_unittests.cc
